# RAG-Powered-Document-Intelligence-Platform

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  celery_app.py  config.py  database.py  ingestion.py  llm_client.py  main.py  retrieval.py  schemas.py  utils.py
backend/sample_docs/: hybrid_search_guide.md  rag_overview.txt
backend/tests/: conftest.py  test_api.py  test_retrieval.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthOverlay.tsx  Diagnostics.tsx  IngestPanel.tsx  QueryWorkspace.tsx  Sidebar.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
streamlit_client/: Dockerfile  streamlit_app.py
