[project]
name = "docmind-backend"
version = "0.1.0"
description = "RAG-Powered Document Intelligence Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.10.1",
    "chromadb==0.6.3",
    "langchain-core==1.4.0",
    "langchain-text-splitters==1.1.2",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "httpx==0.28.1",
    "streamlit==1.58.0",
    "python-multipart==0.0.9",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.15",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (standard for FastAPI)
]

[tool.ruff.mccabe]
max-complexity = 15
